--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1,3 +1,15 @@
+/*MIXINS
+*****************************************/
+.section-icons(@image-url) {
+	content: "";
+	background: url(@image-url) no-repeat;
+	background-size: 100%;
+	width: 40px;
+	height: 40px;
+	float: right;
+}
+/*END MIXINS*/
+
 /*Estilos comunes
 *****************************************/
 *{
@@ -320,8 +332,13 @@ a.more-link{
 	.panels-flexible-row-new-6{
 		background-color: @color-background-light-purple;
 		.panels-flexible-region-new-news_section{
+			h3{
+				&:after{
+	    		    .section-icons("../images/icons/005.png");
+	    		}
+			}
 			.view-display-id-attachment_1{
-				border-bottom: 2px solid @color-primary-dark;
+				border-bottom: 2px solid @color-text-purple;
 				padding-bottom: 30px;
     			padding-top: 20px;
     			margin-bottom: 20px;
@@ -361,6 +378,13 @@ a.more-link{
 
 	//Promotional materials
 	.panels-flexible-region-new-promotional_materials{
+		h3{
+			&:after{
+	    		.section-icons("../images/icons/083.png");
+	    		width: 45px;
+    			height: 45px;
+	    	}
+		}
 		.pane-promotional-materials{
 			div.pane-title{
 				color: @color-text-purple;
@@ -385,56 +409,63 @@ a.more-link{
 	//Oira tools
 	.panels-flexible-row-new-16{
 		background-color: @color-background-light-purple;
-		.view-display-id-block{
-			border-bottom: 2px solid @color-text-purple;
-			padding-bottom: 30px;
-    		padding-top: 20px;
-    		margin-bottom: 20px;
-    		.field-name-field-image{
-    			img{
-    				//width: 100%;
-    				//max-height: 310px; 
-    			}
-    		}
-    		.field-name-title-field{
-    			a{
-    				font-size: @font-size1-6;	
-    			}	
-    		}
-    		.field-name-related-partners{
-				.node-partner{
-					background-color: @color-primary-dark;
-					padding: 15px;
-					color: @color-white;
-					margin-top: 15px;
-					h4{
-						a{
-							font-size: 0.9em;
+		.panels-flexible-region-new-tools{
+			h3{
+				&:after{
+		    		.section-icons("../images/icons/018.png");
+		    	}
+			}
+			.view-display-id-block{
+				border-bottom: 2px solid @color-text-purple;
+				padding-bottom: 30px;
+	    		padding-top: 20px;
+	    		margin-bottom: 20px;
+	    		.field-name-field-image{
+	    			img{
+	    				//width: 100%;
+	    				//max-height: 310px; 
+	    			}
+	    		}
+	    		.field-name-title-field{
+	    			a{
+	    				font-size: @font-size1-6;	
+	    			}	
+	    		}
+	    		.field-name-related-partners{
+					.node-partner{
+						background-color: @color-primary-dark;
+						padding: 15px;
+						color: @color-white;
+						margin-top: 15px;
+						h4{
+							a{
+								font-size: @font-size0-9;
+								color: @color-white;
+								margin-top: 0px;
+							}
+						}
+						.more-link{
 							color: @color-white;
-							margin-top: 0px;
+							text-align: left;
 						}
 					}
-					.more-link{
-						color: @color-white;
-						text-align: left;
-					}
 				}
-			}
-			a.more-link{
-				text-align: left;
-			}
-			a.show-less{
-				text-align: right !important;
-				width: 20px;
-				height: 12px;
-			    float: right;
-			    overflow: hidden;
-			    font-style: normal;
-				&:before{
-					content: "\e253";
-					font-family: "Glyphicons Halflings";
-					font-size: 1.2em;
-					line-height: 0;
+				a.more-link{
+					text-align: left;
+				}
+				a.show-less{
+					text-align: right !important;
+					width: 20px;
+					height: 12px;
+				    float: right;
+				    overflow: hidden;
+				    font-style: normal;
+					&:before{
+						content: "\e253";
+						font-family: "Glyphicons Halflings";
+						font-size: @font-size1-2;
+						line-height: 0;
+					}
 				}
 			}
 		}
@@ -461,7 +492,7 @@ a.more-link{
 					&:before{
 						content: "\e253";
 						font-family: "Glyphicons Halflings";
-						font-size: 1.2em;
+						font-size: @font-size1-2;
 						line-height: 0;
 					}
 				}
@@ -473,7 +504,7 @@ a.more-link{
 						margin-bottom: 15px;
 						h4{
 							a{
-								font-size: 0.9em;
+								font-size: @font-size0-9;
 								color: @color-white;
 								margin-top: 0px;
 							}
@@ -493,6 +524,31 @@ a.more-link{
 	    		font-weight: bold;
 	    		margin-bottom: 14px;
 	    		font-style: italic;
+			}
+		}
+	}
+	//Oira partners
+	.panels-flexible-region-new-oira_partners{
+		.panels-flexible-region-new-oira_partners-inside{
+			h3{
+				&:after{
+		    		.section-icons("../images/icons/123.png");
+		    	}
+			}
+			.view-display-id-oira_partners_homepage{
+				padding-top: 20px;
+				h4{
+					font-size: @font-size2;
+					font-weight: bold;
+				}
+				.views-view-grid{
+					margin-top: 30px;
+					margin-bottom: 15px;
+					padding-bottom: 20px;
+					padding-top: 20px;
+					border-bottom: 2px solid @color-text-purple;
+					border-top: 2px solid @color-text-purple;
+				}
 			}
 		}
 	}
@@ -548,8 +604,13 @@ a.more-link{
 		background-color: @color-primary-dark;
 		margin-bottom: 10px;
 		.panels-flexible-column-new-main{
-			border-right: 10px solid @color-white;
-			height: 244px;
+			//height: 244px;
+		}
+		.panels-flexible-column-new-2{
+			border-left: 10px solid @color-white;
+		}
+		.panels-flexible-column-new-3{
+			border-left: 10px solid @color-white;
 		}
 		#mini-panel-related_content{
 			h3.pane-title{
@@ -666,74 +727,88 @@ a.more-link{
 	.panels-flexible-row-new-3{
 		background-color: @color-primary-dark;
 		margin-top: 10px;
-		h3.pane-title{
-			color: @color-white;
-			border-bottom: 2px solid @color-white;
-			margin-bottom: 0px;
-		}
-		.views-item-columns-container{
-			padding: 15px;
-			margin-top: 30px;
-    		min-height: 230px;
-		}
-		.more-link{
-			a{
+		.panels-flexible-region-new-latest_news{
+			h3.pane-title{
 				color: @color-white;
+				border-bottom: 2px solid @color-white;
+				margin-bottom: 0px;
+				&:after{
+		    		.section-icons("../images/icons/004.png");
+		    	}
+			}
+			.views-item-columns-container{
+				padding: 15px;
+				margin-top: 30px;
+	    		min-height: 230px;
+			}
+			.more-link{
+				a{
+					color: @color-white;
+				}
 			}
 		}
 	}
 	.panels-flexible-row-new-6{
 		background-color: @color-white !important;
-		.views-item-columns-container{
-			background-color: @color-primary;
-			min-height: 538px;
-			.views-field-field-image{
-				min-height: 202px;//testing
+		.panels-flexible-region-new-new_tools{
+			h3{
+				&:after{
+		    		.section-icons("../images/icons/018.png");
+		    	}
 			}
-			.tool-teaser-content-wrapper{
-				padding: 15px;
-				.field-name-related-partners{
-					.node-partner{
-						background-color: @color-primary-dark;
+			.view-id-tools{
+				padding-top: 20px;
+				.views-item-columns-container{
+					background-color: @color-primary;
+					min-height: 538px;
+					.views-field-field-image{
+						min-height: 202px;//testing
+					}
+					.tool-teaser-content-wrapper{
 						padding: 15px;
-						color: @color-white;
-						margin-top: 15px;
-						h4{
-							a{
-								font-size: 0.9em;
+						.field-name-related-partners{
+							.node-partner{
+								background-color: @color-primary-dark;
+								padding: 15px;
 								color: @color-white;
-								margin-top: 0px;
+								margin-top: 15px;
+								h4{
+									a{
+										font-size: 0.9em;
+										color: @color-white;
+										margin-top: 0px;
+									}
+								}
+								.more-link{
+									color: @color-white;
+									text-align: left;
+								}
 							}
 						}
-						.more-link{
-							color: @color-white;
-							text-align: left;
-						}
-					}
-				}
-				.tools_see_more-processed{
-					margin-left: 207px;
-					a.more-link{
-						text-align: right;
-						margin-top: 15px;
-					}
-					a.show-less{
-						text-align: right !important;
-						width: 20px;
-						height: 12px;
-					    float: right;
-					    overflow: hidden;
-					    font-style: normal;
-						&:before{
-							content: "\e253";
-							font-family: "Glyphicons Halflings";
-							font-size: 1.2em;
-							line-height: 0;
+						.tools_see_more-processed{
+							margin-left: 207px;
+							a.more-link{
+								text-align: right;
+								margin-top: 15px;
+							}
+							a.show-less{
+								text-align: right !important;
+								width: 20px;
+								height: 12px;
+							    float: right;
+							    overflow: hidden;
+							    font-style: normal;
+								&:before{
+									content: "\e253";
+									font-family: "Glyphicons Halflings";
+									font-size: 1.2em;
+									line-height: 0;
+								}
+							}
 						}
 					}
 				}
 			}
-
 		}
 	}
 }
@@ -1704,6 +1779,9 @@ a.more-link{
 			padding-bottom: 15px;
 			font-size: 2.2em;
 	    	font-family: 'Oswald';
+	    	&:after{
+	    		.section-icons("../images/icons/122.png");
+	    	}
 		}
 		.menu{
 			display: table;
@@ -1716,15 +1794,39 @@ a.more-link{
 					color: @color-white;
 					font-style: italic;
 					&:before{
-						content: "Icon";
-						color: @color-text-purple-darker;
-						display: block;
-						background-color: @color-white;
-						width: 150px;
-						height: 150px;
-						border-radius: 50%;
-						margin: 0 auto 15px auto;
-						line-height: 150px;
+						content: "";
+					    display: block;
+					    width: 150px;
+					    height: 150px;
+					    border-radius: 50%;
+					    margin: 0 auto 15px auto;
+					}
+				}
+			}
+			li:nth-child(1){
+				a{
+					&:before{
+						background: url(../images/icons/096.png) no-repeat white;
+						background-size: 65%;
+					    background-position: 50% 50%;
+					}
+				}
+			}
+			li:nth-child(2){
+				a{
+					&:before{
+						background: url(../images/icons/105.png) no-repeat white;
+						background-size: 65%;
+					    background-position: 50% 50%;
+					}
+				}
+			}
+			li:nth-child(3){
+				a{
+					&:before{
+						background: url(../images/icons/114.png) no-repeat white;
+						background-size: 65%;
+					    background-position: 50% 50%;
 					}
 				}
 			}
