--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -909,7 +909,7 @@
 @color-see-more: @color-menu;
 
 @color-text-grey: #58585a;
-@color-text-purple: #967ea7;
+@color-text-purple: #967ea7; //ya veremos si se cambia por el oscuro
 @color-text-purple-darker: #786586;
 @color-text-white: @color-white;
 @color-red: #343434;
