css changes - promotional materials 14:59 24-06-2016

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1413,7 +1413,7 @@ a.more-link{
 ********************************************************************/
 
 //introduction
-.page-promotional-materials{
+.page-promotional-resources{
 	.pane-node-body{
 		.field-type-text-with-summary {
 		    font-family: 'Oswald';
@@ -1421,7 +1421,7 @@ a.more-link{
 		    margin-bottom: 30px;
 		}
 	}
-	.panels-flexible-row-new-1{
+	.panels-flexible-row-page-promotional-materials-1{
 		background-color: @color-primary;
 		padding-top: 30px;
 		padding-bottom: 30px;
@@ -1452,7 +1452,7 @@ a.more-link{
 }
 
 //search
-.page-promotional-materials-search{
+.page-promotional-resources-search{
 	h1{
 		color: @color-text-purple-darker;
 	}
@@ -1463,7 +1463,7 @@ a.more-link{
 			margin-bottom: 30px;
 		}
 	}
-	.panels-flexible-row-new-1{
+	.panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last{
 		background: url('../images/background-two-colors.png') repeat-y 50%;
 		padding-bottom: 0px;
 		padding-top: 0px;
@@ -1568,7 +1568,6 @@ a.more-link{
 								margin-left: 10px;
 							}
 						}
-
 					}
 					.form-item-field-sector{
 						border-bottom: 2px solid @color-white;
@@ -1622,7 +1621,7 @@ a.more-link{
 					.search-page-results-wrapper{
 						background-color: @color-white;
 						padding: 30px;
-						.node-practical-tool{
+						.node-promotional-material{
 							border-top: 2px solid @color-primary-dark;
 							padding:30px 0px;
 							margin-right: 0px;
@@ -1634,7 +1633,7 @@ a.more-link{
 								font-size: @font-size1-4;
 							}
 							.field-name-tools-see-more{
-								margin-left: 207px;
+								//margin-left: 207px;
 								a.more-link{
 									text-align: left;
 									margin-top: 15px;
@@ -1667,13 +1666,14 @@ a.more-link{
 									}
 								}
 							}
-							/*
+							
 							//partners inside oira tools
 							.field-name-related-partners{
 								.node-partner{
 									background-color: @color-primary-dark;
     								padding: 15px;
     								color: @color-white;
+    								margin-top: 20px;
     								h4{
     									a{
     										font-size: 1.2em;
@@ -1688,7 +1688,7 @@ a.more-link{
     							}
 							}
 							.related-partners-1 > div{
-								margin-left: 222px;
+								//margin-left: 222px;
 							}
 							.related-partners-2 > div{
 								display: table;
@@ -1701,7 +1701,7 @@ a.more-link{
 								& > .even:first-child{
 									border-right: 10px solid white;
 								}
-							}*/
+							}
 						}
 					}
 				}
